[package]
authors = ["omnect@conplement.de"]
edition = "2021"
homepage = "https://www.omnect.io/home"
license = "MIT OR Apache-2.0"
name = "modemmanager-sys"
readme = "README.md"
repository = "git@github.com:omnect/modemmanager-sys.git"
version = "0.1.2"

[dependencies]
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
serde = { version = "1.0.192", features = ["serde_derive"] }
zvariant = { version = "3.15", optional = true }

[build-dependencies]
bindgen = "0.69.1"
pkg-config = "0.3.27"

[features]
zbus = ["dep:zvariant"]