[package]
authors = ["omnect@conplement.de"]
edition = "2021"
homepage = "https://www.omnect.io/home"
license = "MIT OR Apache-2.0"
name = "modemmanager-sys"
readme = "README.md"
repository = "git@github.com:omnect/modemmanager-sys.git"
version = "0.1.3"

[dependencies]
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["serde_derive"] }
zvariant = { version = "4.1", optional = true }

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"

[features]
zbus = ["dep:zvariant"]
